@@ -1,26 +1,32 @@
 plugins {
     id 'application'
     id "org.sonarqube" version "3.0"
-    id 'org.springframework.boot' version '2.3.6.RELEASE'
+    id 'org.springframework.boot' version '2.7.14'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '8.0.2'
-    id "uk.gov.hmcts.java" version '0.12.0'
-    id "com.gorylenko.gradle-git-properties" version "1.4.21"
+    id "uk.gov.hmcts.java" version '0.12.43'
+    id "com.gorylenko.gradle-git-properties" version "2.4.1"
     id 'jacoco'
 }
 
-def springBootVersion = '2.3.6.RELEASE'
-def springCloudVersion = 'Finchley.SR2'
+def springBootVersion = '2.7.14'
+def springCloudVersion = '2021.0.8'
 
 
 def versions = [
-        lombok: '1.18.12',
-        javaVersion: '11',
+        lombok: '1.18.28',
+        javaVersion: '17',
         jacocoVersion: '0.8.5'
 ]
 
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
+
 dependencies{
-    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
+    testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
 }
 
 task fortifyScan(type: JavaExec)  {
@@ -30,7 +36,6 @@ task fortifyScan(type: JavaExec)  {
 }
 
 allprojects {
-    apply plugin: 'maven'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'idea'
     apply plugin: 'jacoco'
@@ -40,9 +45,6 @@ allprojects {
         buildNumber = System.getenv("BUILD_NUMBER") ?: '0'
     }
     version = rootProject.file('version.txt').text.trim() + ".${buildNumber}"
-
-    sourceCompatibility = versions.javaVersion
-    targetCompatibility = versions.javaVersion
 
     repositories {
         mavenLocal()
@@ -63,10 +65,14 @@ allprojects {
         dependencies {
             dependencySet(
                     group: 'com.fasterxml.jackson.core',
-                    version: '2.10.0'
+                    version: '2.15.2'
             ) {
                 entry 'jackson-core'
                 entry 'jackson-databind'
+            }
+            // CVE-2020-8908
+            dependencySet(group: 'com.google.guava', version: '32.1.2-jre') {
+                entry 'guava'
             }
         }
     }
@@ -116,23 +122,24 @@ subprojects {
         }
     }
     dependencies {
-        compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
-        testCompile 'io.github.openfeign:feign-jackson:9.7.0'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
-        compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
-        compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
-        compile group:'org.apache.poi', name: 'poi-ooxml', version: '5.2.1'
-        compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-        testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+        implementation ('com.sun.xml.bind:jaxb-osgi:2.3.8')
+        testImplementation 'io.github.openfeign:feign-jackson:12.3'
+        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.15.2'
+        implementation group: 'joda-time', name: 'joda-time', version: '2.12.5'
+        implementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
+        implementation group:'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
+        implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.1'
+        testImplementation group: 'junit', name: 'junit', version: '4.12'
+        testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+        testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
-        compile group: 'org.owasp.encoder', name: 'encoder', version: '1.2.2'
-        compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
+        implementation group: 'org.owasp.encoder', name: 'encoder', version: '1.2.3'
+        implementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         implementation 'org.springframework.boot:spring-boot-starter-validation'
-        compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
+        implementation(group: 'com.github.hmcts', name: 'ccd-client', version: '4.9.2') {
             sourceSets {
                 main {
                     java {
@@ -143,10 +150,16 @@ subprojects {
         }
 
     }
+
+    test {
+        jvmArgs = [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+        ]
+    }
 }
 
 dependencies {
-    compile project(':payment-api')
+    implementation project(':payment-api')
 }
 
 mainClassName = 'uk.gov.hmcts.PaymentApiApplication'
@@ -176,26 +189,29 @@ def sonarExclusions = [
         '**/v1/**',
         '**/OtpBootstrap.java',
         '**/api/model/**',
-        '**/api/configuration/security/SpringSecurityConfiguration.java',
         '**/referencedata/model/**',
         '**/api/dto/*.java',
         '**/referencedata/dto/*.java',
         '**/api/service/*Service.java',
+        '**/api/servicebus/TopicClientService.java',
         '**/referencedata/service/*Service.java',
         '**/api/service/MockAccountServiceImpl.java',
-        '**/api/service/PaymentServiceImpl.java',
         '**/api/service/MockCcdDataStoreClientServiceImpl.java',
         '**/api/controllers/mock/MockCallbackControllerForTesting.java',
         '**/api/controllers/ServiceRequestController.java',
         '**/api/domain/mapper/**',
+        '**/api/dto/mapper/*Mapper.java',
         '**/api/domain/service/**',
         '**/api/contract/**',
+        '**/api/contract/*Dto.java',
         '**/api/dto/mapper/**',
         '**/api/reports/config/**',
         '**/api/external/client/dto/**',
         '**/api/external/client/exceptions/**',
         '**/api/jpaaudit/listner/**',
-        '**/api/jpaaudit/model/**'
+        '**/api/jpaaudit/model/**',
+        '**/api/service/PaymentRefundsServiceImpl.java',
+        '**/api/service/RefundRemissionEnableServiceImpl.java'
 ]
 
 sonarqube {
@@ -214,6 +230,10 @@ sonarqube {
 }
 
 project.tasks['sonarqube'].dependsOn codeCoverageReport
+
+tasks.withType(JavaExec).configureEach {
+  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+}
 
 task smoke(type: GradleBuild, description: 'Runs smoke tests', group: 'Verification') {
     buildFile = './api/build.gradle'
